@@ -1133,21 +1133,33 @@ class Album {
             echo ("Skipping Movie");
         }
     }
-
-    function resizeAllPhotos($target,$filesize=0,$pathToResized="", $recursive=false) {
+	/**
+	 * Resize and optionally shrink all photos of an album. Movies are skipped.
+	 * If wanted this can be done recursive.
+	 *
+	 * @param integer	$target			New size of the longest site in pixel.
+	 * @param integer	$filesize		New minimum filesize.
+	 * @param boolean	$recursive		True if you want to resize elements in subalbums, too.
+	 */
+    function resizeAllPhotos($target, $filesize = 0, $recursive = false) {
         for ($i=1; $i <= $this->numPhotos(1); $i++) {
             if ($this->isAlbum($i) && $recursive == true) {
                 $nestedAlbum = new Album();
                 $nestedAlbum->load($this->getAlbumName($i));
                 $np = $nestedAlbum->numPhotos(1);
-                echo "\n<br>". sprintf (_("Entering album %s, processing %d photos"), $this->getAlbumName($i), $np);
-                $nestedAlbum->resizeAllPhotos($target,$filesize=0,$pathToResized="", $recursive);
+
+                echo "\n<br>";
+                printf (_("Entering album %s, processing %d photos"), $this->getAlbumName($i), $np);
+
+                $nestedAlbum->resizeAllPhotos($target,$filesize, $recursive);
                 $nestedAlbum->save();
             }
             else {
-                echo "<br>". sprintf(_("Processing element %d..."), $i);
+                echo "\n<br>";
+                printf(_("Processing element %d..."), $i);
+
                 my_flush();
-                $this->resizePhoto($i, $target, $filesize=0, $pathToResized="");
+                $this->resizePhoto($i, $target, $filesize);
             }
         }
     }
