@@ -1,3 +1,10 @@
+2007-06-06 Jens Tkotz <jens@peino.de> 1.5.7-svn-b4
+
+ * Change: Remove unneeded param $pathToResized from
+           Album::resizeAllPhotos
+
+ * Fix: Correct call of the method above.
+
 2007-05-23 Jens Tkotz <jens@peino.de> 1.5.7-svn-b3
 
  * Fix: Unquoted indexes in ecardform
